# DynoHook

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  dynohook-config.cmake.in  git.cmake
.github/: release-please-config.json
.github/workflows/: build.yml  clang.yml  cmake-multiple-platform.yml  gcc.yml  msvc.yml  msys2.yml  publish.yml
dynohook/: convention.cpp  convention.h  core.cpp  core.h  disassembler.cpp  disassembler.h  fb_allocator.cpp  fb_allocator.h  hook.cpp  hook.h  instruction.cpp  instruction.h  listener.h  log.cpp  log.h  main.cpp  manager.cpp  manager.h  mem_accessor.cpp  mem_accessor.h  mem_protector.cpp  mem_protector.h  pch.h  range_allocator.cpp  registers.cpp  registers.h
dynohook/conventions/: x64_ms_fastcall.cpp  x64_ms_fastcall.h  x64_systemV_call.cpp  x64_systemV_call.h  x64_windows_call.h  x86_gcc_cdecl.h  x86_gcc_thiscall.h  x86_ms_cdecl.cpp  x86_ms_cdecl.h  x86_ms_fastcall.cpp  x86_ms_fastcall.h  x86_ms_stdcall.cpp  x86_ms_stdcall.h  x86_ms_thiscall.cpp  x86_ms_thiscall.h
dynohook/conventions/x64/: x64MsFastcall.cpp  x64SystemVcall.cpp  x64SystemVcall.h
dynohook/conventions/x86/: x86MsCdecl.cpp  x86MsFastcall.cpp  x86MsFastcall.h  x86MsStdcall.cpp  x86MsThiscall.cpp
dynohook/detours/: detour.cpp  detour.h  x64_detour.cpp  x86_detour.cpp
dynohook/tests/: effect_tracker.cpp  effect_tracker.h  stack_canary.cpp  stack_canary.h
dynohook/virtuals/: vhook.cpp  vhook.h  vtable.cpp  vtable.h
include/dynohook/: _hook.h  convention.h  core.h  disassembler.h  fb_allocator.h  function_traits.h  helpers.h  hook.h  ihook.h  imanager.h  instruction.h  log.h  manager.h  mem_accessor.h  mem_protector.h  nat_hook.h  os.h  pch.h  platform.h  prot.h  range_allocator.h  registers.h  x64_hook.h  x86_hook.h
include/dynohook/conventions/: x64_systemV_call.h  x64_windows_call.h  x86_ms_cdecl.h  x86_ms_fastcall.h  x86_ms_stdcall.h  x86_ms_thiscall.h
include/dynohook/detours/: detour.h  nat_detour.h  x64_detour.h  x86_detour.h
include/dynohook/tests/: effect_tracker.h  stack_canary.h
include/dynohook/virtuals/: vhook.h  vtable.h
src/: convention.cpp  core.cpp  disassembler.cpp  fb_allocator.cpp  hook.cpp  instruction.cpp  log.cpp  main.cpp  manager.cpp  mem_accessor.cpp  mem_protector.cpp  pch.h  pch.hpp  range_allocator.cpp  registers.cpp  x64_hook.cpp  x86_hook.cpp
src/conventions/: x64_ms_fastcall.cpp  x64_systemV_call.cpp  x64_windows_call.cpp  x86_ms_cdecl.cpp  x86_ms_fastcall.cpp  x86_ms_stdcall.cpp  x86_ms_thiscall.cpp
src/detours/: detour.cpp  x64_detour.cpp  x86_detour.cpp
src/dynohook/: adetour.cpp  adetour.h  convention.cpp  convention.h  convention.hpp  core.cpp  core.h  core.hpp  decoder.cpp  decoder.h  decoder.hpp  detour.cpp  detour.h  disassembler.cpp  disassembler.h  enums.h  fb_allocator.cpp  fb_allocator.h  hook.cpp  hook.h  hook.hpp  ihook.h  instruction.cpp  instruction.h  main.cpp  manager.cpp  manager.h  manager.hpp  mem_accessor.cpp  mem_accessor.h  mem_protector.cpp  mem_protector.h  memory.cpp  memory.h  memory.hpp  nat_detour.h  os.h  platform.h  platform.hpp  prot.h  (+19 more)
src/dynohook/conventions/x64/: x64MsFastcall.cpp  x64MsFastcall.h  x64MsFastcall.hpp  x64MsStdcall.cpp  x64MsStdcall.hpp  x64SystemVcall.cpp  x64SystemVcall.h  x64SystemVcall.hpp
src/dynohook/conventions/x86/: x86GccCdecl.h  x86GccCdecl.hpp  x86GccThiscall.h  x86GccThiscall.hpp  x86MsCdecl.cpp  x86MsCdecl.h  x86MsCdecl.hpp  x86MsFastcall.cpp  x86MsFastcall.h  x86MsFastcall.hpp  x86MsStdcall.cpp  x86MsStdcall.h  x86MsStdcall.hpp  x86MsThiscall.cpp  x86MsThiscall.h  x86MsThiscall.hpp
src/dynohook/detours/: detour.cpp  nat_detour.h  x64_detour.cpp  x64_detour.h  x86_detour.cpp  x86_detour.h
src/dynohook/virtuals/: vhook.cpp  vhook.h  vtable.cpp  vtable.h
src/tests/: effect_tracker.cpp  stack_canary.cpp
src/virtuals/: vhook.cpp  vtable.cpp
tests/: main.cpp.in  main_tests.cpp  test0.hpp.in  test1.hpp.in  test2.hpp.in  test3.hpp.in  test4.hpp.in  test5.hpp.in  test6.hpp.in  test7.hpp.in  test8.hpp.in  test_detour_notd_x64.cpp  test_detour_scheme_x64.cpp  test_detour_translation_x64.cpp  test_detour_x64.cpp  test_detour_x86.cpp  test_disassembler.cpp  test_virtual.cpp
tests/linux/: test_mem_protector.cpp
tests/windows/: test_detour_notd_x64.cpp  test_detour_scheme_x64.cpp  test_detour_translation_x64.cpp  test_detour_x64.cpp  test_detour_x86.cpp  test_disassembler.cpp  test_mem_protector.cpp  test_virtual.cpp
